# polynomial_interpolation

./: .gitignore  CMakeLists.txt  README.md  funs_interp.c  funs_interp.h  log.gnu  main_errinterp.c  main_taula.c  runge.gnu  taula.gnu  taula.in
